<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/header_default" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topTicket"
        android:background="@color/white"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            style="@style/MediumText.HeadingLarge"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/tiket" />

        <TextView
            android:id="@+id/tvRefresh"
            style="@style/RegularText.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_refresh"
            android:drawablePadding="@dimen/_2sdp"
            android:visibility="gone"
            android:text="@string/klik_untuk_perbarui"
            android:textColor="@color/blue_dodger"
            app:layout_constraintBottom_toBottomOf="@id/tvWelcome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvWelcome"  />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorColor="@color/blue_dodger"
            app:tabTextColor="@color/grey_storm"
            app:tabSelectedTextColor="@color/blue_dodger"
            app:tabTextAppearance="@style/MediumText.TabTitle"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiket_saya" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semua_tiket" />

        </com.google.android.material.tabs.TabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.akarinti.sapoe.view.component.CustomViewPager
        android:id="@+id/vpTicket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/topTicket"
        app:layout_constraintBottom_toTopOf="@id/bgBottom"/>
    <ImageView
        android:id="@+id/ivTicketEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_state"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topTicket"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiket_kosong"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTicketEmpty"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bgBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnAddTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/PrimaryButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/tiket_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>