<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_alice">

    <include
        android:id="@+id/header"
        layout="@layout/header_default" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topKunjungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/MediumText.HeadingLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rute_kunjungan"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_refresh"
            android:drawablePadding="@dimen/_2sdp"
            android:text="@string/klik_untuk_perbarui"
            android:textColor="@color/blue_dodger"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tvWelcome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvWelcome"  />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabKunjungan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            app:tabIndicatorColor="@color/blue_dodger"
            app:tabIndicatorFullWidth="true"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/blue_dodger"
            app:tabTextAppearance="@style/MediumText.TabTitle"
            app:tabTextColor="@color/grey_storm">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kunjungan" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_terkirim" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arsip" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/grey_ghost"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topKunjungan" />

    <com.akarinti.sapoe.view.component.CustomViewPager
        android:id="@+id/vpKunjungan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/bottom"/>
    <View
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/grey_ghost"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ImageView
        android:id="@+id/ivEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_state"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topKunjungan" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kunjungan_kosong"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEmpty"
        />


</androidx.constraintlayout.widget.ConstraintLayout>