<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey_alice"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black_russian"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_storm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHome"
            style="@style/RegularText.NavigationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/nav_beranda"
            android:padding="5dp"
            android:text="@string/beranda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvVisit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvVisit"
            style="@style/RegularText.NavigationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/nav_kunjungan"
            android:padding="5dp"
            android:text="@string/kunjungan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvHome"
            app:layout_constraintRight_toLeftOf="@id/tvUnscheduled"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUnscheduled"
            style="@style/RegularText.NavigationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/nav_tak_terjadwal"
            android:padding="5dp"
            android:text="@string/tak_terjadwal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvVisit"
            app:layout_constraintRight_toLeftOf="@id/tvTicket"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTicket"
            style="@style/RegularText.NavigationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/nav_tiket"
            android:padding="5dp"
            android:text="@string/ticket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvUnscheduled"
            app:layout_constraintRight_toLeftOf="@id/tvOther"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOther"
            style="@style/RegularText.NavigationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/nav_lainnya"
            android:padding="5dp"
            android:text="@string/lainnya"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvTicket"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>